feat: bootstrap 5 with webpack 5

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "app",
   "private": "true",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/alexcode-cc/Rails701.git"
 	},
 	"scripts": {
     "build": "webpack --config webpack.config.js",
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build:css": "sass ./app/assets/stylesheets/application.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
 		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
 		"changelog:init": "conventional-changelog -o CHANGELOG.md",
 		"changelog:check": "conventional-changelog",
